HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumNonFfiPayload/Expected.uv
//! Expected diagnostic metadata for the FfiSafeEnumNonFfiPayload rejected-source specimen.

expectedDiagnostic("E-TYP-2627", "rule.23.FfiSafe-Enum-Field-Err")
